SERVER-90643 reacquire oplog reference before reclaiming space (#22468)

GitOrigin-RevId: b4bf35d704f1956f2eb4bfa3006bca2750c2e83b