src/mongo/db/storage/oplog_cap_maintainer_thread.h
@@ -33,6 +33,7 @@
 
 #include "mongo/db/auth/cluster_auth_mode.h"
 #include "mongo/db/namespace_string.h"
+#include "mongo/db/operation_context.h"
 #include "mongo/util/background.h"
 
 namespace mongo {
@@ -61,7 +62,7 @@ private:
     /**
      * Returns true iff there was an oplog to delete from.
      */
-    bool _deleteExcessDocuments();
+    bool _deleteExcessDocuments(OperationContext* opCtx);
 
     std::string _name = std::string("OplogCapMaintainerThread-") +
         toStringForLogging(NamespaceString::kRsOplogNamespace);
